# docuvault

./: .env.example  .gitignore  REDESIGN.md  docker-compose.yml  mcp-config.json
backend/: Dockerfile  requirements.txt
backend/app/: main.py  worker.py
backend/app/api/: automation.py  backup.py  documents.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  document.py
backend/app/schemas/: document.py
backend/app/services/: bulk_import.py  classifier.py  dedup.py  email_ingest.py  mcp_server.py  ocr.py  search.py  (+3 more)
design-system/: DocuVault Prototype.html  README.md  SKILL.md  colors_and_type.css
design-system/assets/: iconography.md
design-system/preview/: _base.css  brand-iconography.html  brand-logo.html  brand-voice.html  color-accent.html  color-categories.html  color-confidence.html  color-filetypes.html  color-ink.html  color-semantic.html  components-badges.html  components-buttons.html  components-cards.html  components-chatbubble.html  components-cmdk.html  components-docrow.html  components-inputs.html  components-insights.html  spacing-elevation.html  spacing-radii.html  spacing-scale.html  type-faces.html  type-in-use.html  type-scale.html
desktop/src-python/: chat.py  features.py  features_ai.py  features_collab.py  features_extra.py  features_platform.py  features_views.py  requirements.txt  server.py  test_server.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
(+45 files in other folders)
